--- a/WriteALogPackage/Makefile
+++ b/WriteALogPackage/Makefile
@@ -7,14 +7,14 @@ init:
 .PHONY:gencert
 gencert:
 	cfssl gencert \
-		-initca test/ca-csr.json|cfssljsn -bare ca
+		-initca test/ca-csr.json | cfssljson -bare ca
 
 	cfssl gencert \
-		-ca=ca.pem \ 
+		-ca=ca.pem \
 		-ca-key=ca-key.pem \
 		-config=test/ca-config.json \
 		-profile=server \
-		test/server-csr.jon | cfssljson -bare server
+		test/server-csr.json | cfssljson -bare server
 	mv *.pem *.csr ${CONFIG_PATH}
 
 .PHONY:compile
